# mqtt-comparison

./: .gitignore  CONTRIBUTING.md  DOCKER.md  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.docker  README.md  STATUS.md  docker-compose.yml  mkdocs.yml  requirements.txt  smoke.sh  summarize_phase.py
.github/workflows/: ci.yml  deploy-mkdocs.yml
benchmarks/: Makefile  README.md  analyze_results.py  benchmark.py  run_all.py
c/: Makefile  README.md  requirements.txt
c/src/: json_encoder.c  publisher.c  sensor_data.c  sensor_data.h  sensor_data.pb-c.c  sensor_data.pb-c.h  subscriber.c
cpp/: CMakeLists.txt  README.md
cpp/src/: json_encoder.cpp  publisher.cpp  sensor_data.cpp  sensor_data.h  sensor_data.pb.cc  sensor_data.pb.h  subscriber.cpp
csharp/: MQTTComparison.csproj  README.md
csharp/src/: Publisher.cs  SensorData.cs  Subscriber.cs
docker/: Dockerfile.benchmark  Dockerfile.c  Dockerfile.cpp  Dockerfile.csharp  Dockerfile.java  Dockerfile.julia  Dockerfile.python  Dockerfile.r  Dockerfile.rust
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEVELOPMENT.md  IMPLEMENTATION_MATRIX.md  QUICK_REFERENCE.md  howto-build-docs.md  overview.md
docs/_prompts/: 001.md  002.md
docs/_summaries/: 20251006_205100_python_parity.md  20251006_205208_rust_implementation.md  20251006_205448_c_cpp_implementation.md  20251006_205741_julia_r_csharp.md  20251006_205846_cbor_protobuf.md  20251006_205957_unified_benchmark.md  20251007_002517_bootstrap.md  README.md
java/: README.md  pom.xml
julia/: Project.toml  README.md
python/: README.md  requirements.txt
r/: README.md  publisher.R  requirements.txt  subscriber.R
results/: .gitkeep
rust/: Cargo.toml  README.md
rust/src/: main.rs  publisher.rs  subscriber.rs
schemas/: sensor_data.cbor.md  sensor_data.json  sensor_data.msgpack.md  sensor_data.proto
scripts/: run-all-tests.sh  run-benchmark.sh  run-broker.sh  run-language-test.sh  test-docker-setup.sh  test-docker.sh
tools/: build_docs.sh  render_reports.py
(+72 files in other folders)
